--- a/index.html
+++ b/index.html
@@ -12,9 +12,23 @@
             padding: 0;
             box-sizing: border-box;
         }
+
+        html, 
+        body{
+            height: 100%;
+            width: 100%;
+            background-color:black;
+        }
+        
     </style>
 </head>
 <body>
+
+    <main class="w-ful text-white flex flex-col gap-4 items-center pt-[15vh]">
+        <img 
+        src=""
+
+    </main>
     
 </body>
 </html>
