--- a/index.html
+++ b/index.html
@@ -1,34 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
 
     <style>
-        *{
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
 
-        html, 
-        body{
-            height: 100%;
-            width: 100%;
-            background-color:black;
-        }
-        
+      html,
+      body {
+        height: 100%;
+        width: 100%;
+        background-color: black;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
+    <main
+      class="w-full text-white text-center flex flex-col gap-4 items-center pt-[15vh]"
+    >
+      <div class="card flex flex-col w-[27vw] py-[25px] rounded-[25px] gap-4 items-center  bg-[#2e251e]">
+        <img
+          src="./images/img1.png"
+          alt="image1"
+          class="w-[180px] aspect-square "
+        >
 
-    <main class="w-ful text-white flex flex-col gap-4 items-center pt-[15vh]">
-        <img 
-        src=""
+        <h1 class="text-4xl font-thin">
+          The <br>
+          <span class="font-bold"> Algorithm </span>
+        </h1>
 
+        <p>
+          Lorem ipsum dolor sit amet.
+        </p>
+      </div>
     </main>
-    
-</body>
+  </body>
 </html>
