feat : sticky and card  / img

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <main
       class="w-full text-white text-center flex flex-col gap-4 items-center pt-[15vh]"
     >
-      <div class="card flex flex-col w-[27vw] py-[25px] rounded-[25px] gap-4 items-center  bg-[#2e251e]">
+
+        <div class="card card1 sticky top-[15vh] flex flex-col w-[27vw] py-[25px] rounded-[25px] gap-4 items-center  bg-[#2e251e]">
+
         <img
           src="./images/img1.png"
           alt="image1"
@@ -41,6 +43,102 @@
           Lorem ipsum dolor sit amet.
         </p>
       </div>
+
+
+        <div class="card card2 sticky top-[15vh] flex flex-col w-[27vw] py-[25px] rounded-[25px] gap-4 items-center  bg-[#2e251e]">
+
+        <img
+          src="./images/img2.png"
+          alt="image1"
+          class="w-[180px] aspect-square "
+        >
+
+        <h1 class="text-4xl font-thin">
+          The <br>
+          <span class="font-bold"> Algorithm </span>
+        </h1>
+
+        <p>
+          Lorem ipsum dolor sit amet.
+        </p>
+      </div>
+
+
+        <div class="card card3 sticky top-[15vh] flex flex-col w-[27vw] py-[25px] rounded-[25px] gap-4 items-center  bg-[#2e251e]">
+
+        <img
+          src="./images/img3.png"
+          alt="image1"
+          class="w-[180px] aspect-square "
+        >
+
+        <h1 class="text-4xl font-thin">
+          The <br>
+          <span class="font-bold"> Algorithm </span>
+        </h1>
+
+        <p>
+          Lorem ipsum dolor sit amet.
+        </p>
+      </div>
+
+
+        <div class="card card4 sticky top-[15vh] flex flex-col w-[27vw] py-[25px] rounded-[25px] gap-4 items-center  bg-[#2e251e]">
+
+        <img
+          src="./images/img4.png"
+          alt="image1"
+          class="w-[180px] aspect-square "
+        >
+
+        <h1 class="text-4xl font-thin">
+          The <br>
+          <span class="font-bold"> Algorithm </span>
+        </h1>
+
+        <p>
+          Lorem ipsum dolor sit amet.
+        </p>
+      </div>
+
+
+      <div class="card card5 sticky top-[15vh] flex flex-col w-[27vw] py-[25px] rounded-[25px] gap-4 items-center  bg-[#2e251e]">
+
+        <img
+          src="./images/img5.png"
+          alt="image1"
+          class="w-[180px] aspect-square "
+        >
+
+        <h1 class="text-4xl font-thin">
+          The <br>
+          <span class="font-bold"> Algorithm </span>
+        </h1>
+
+        <p>
+          Lorem ipsum dolor sit amet.
+        </p>
+      </div>
+
+
+      <div class="card card6 sticky top-[15vh] flex flex-col w-[27vw] py-[25px] rounded-[25px] gap-4 items-center  bg-[#2e251e]">
+
+        <img
+          src="./images/img6.png"
+          alt="image1"
+          class="w-[180px] aspect-square "
+        >
+
+        <h1 class="text-4xl font-thin">
+          The <br>
+          <span class="font-bold"> Algorithm </span>
+        </h1>
+
+        <p>
+          Lorem ipsum dolor sit amet.
+        </p>
+      </div>
+
     </main>
   </body>
 </html>
