--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <p>
           Lorem ipsum dolor sit amet.
         </p>
-      </div>
+      </div>  
 
 
         <div class="card card2 sticky top-[15vh] flex flex-col w-[27vw] py-[25px] rounded-[25px] gap-4 items-center  bg-[#2e251e]">
@@ -135,7 +135,7 @@
         </h1>
 
         <p>
-          Lorem ipsum dolor sit amet.
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
         </p>
       </div>
 
