--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
         width: 100%;
         background-color: black;
       }
-      
+
     </style>
+
   </head>
   <body>
+    
     <main
-      class="w-full text-white text-center flex flex-col gap-4 items-center pt-[15vh]"
+      class="w-full text-white text-center flex flex-col gap-4 items-center py-[15vh]"
     >
 
-        <div class="card card1 sticky top-[15vh] flex flex-col w-[27vw] py-[25px] rounded-[25px] gap-4 items-center  bg-[#2e251e]">
+        <div class="card card1 sticky top-[15vh] b flex flex-col w-[27vw] py-[25px] rounded-[25px] gap-4 items-center  bg-[#2e251e]">
 
         <img
           src="./images/img1.png"
@@ -46,30 +48,11 @@
       </div>  
 
 
-        <div class="card card2 sticky top-[15vh] flex flex-col w-[27vw] py-[25px] rounded-[25px] gap-4 items-center  bg-[#2e251e]">
-
-        <img
-          src="./images/img2.png"
-          alt="image1"
-          class="w-[180px] aspect-square "
-        >
-
-        <h1 class="text-4xl font-thin">
-          The <br>
-          <span class="font-bold"> Algorithm </span>
-        </h1>
-
-        <p>
-          Lorem ipsum dolor sit amet.
-        </p>
-      </div>
-
-
         <div class="card card3 sticky top-[15vh] flex flex-col w-[27vw] py-[25px] rounded-[25px] gap-4 items-center  bg-[#2e251e]">
 
         <img
           src="./images/img3.png"
-          alt="image1"
+          alt="image3"
           class="w-[180px] aspect-square "
         >
 
@@ -88,7 +71,7 @@
 
         <img
           src="./images/img4.png"
-          alt="image1"
+          alt="image4"
           class="w-[180px] aspect-square "
         >
 
@@ -107,7 +90,7 @@
 
         <img
           src="./images/img5.png"
-          alt="image1"
+          alt="image5"
           class="w-[180px] aspect-square "
         >
 
